--- a/Homeworks/CSS/index.css
+++ b/Homeworks/CSS/index.css
@@ -1,32 +1,38 @@
-.box-light{
-width:100px;
-height:362px;
-margin-top:28px;
-margin-left:66px;
-border: 4px solid rgba(246, 191, 11, 0.333) ;
+
+html {
+    font-family: Roboto, sans-serif;
 }
-.box-light-red{
-    width: 100%;
-    height:100px;
-    top:28px; 
-    background-color: #FF0000; 
+
+.cv {
+    color:brown;
+    font-weight: 100;
+    font-size: medium;
 }
-.box-light-green{
-    width:100%;
-    height:100px;
-    margin-top:28px; 
-    background-color: #00FF00; 
-} 
-.box-light-blue{
-    width:100%;
-    height:100px;
-    margin-top:28px; 
-    background-color:  #0000FF; 
+
+.header {
+    text-align: center;
+    font-size: medium;
 }
-.box-light-circle{
-    width:100%;
-    height:100px;
-    margin-top: 28px;
-    background-color: #C3C3C3;
-    border-radius: 50%;
+    
+img {
+    width: auto;
+    height: 100%;
 }
+
+
+.text {
+font-weight: 500;
+text-align: center;
+}
+
+.text {
+    text-align: center;
+    margin-top: 1%;
+
+}
+.footer {
+    text-align: center;
+    
+}
+
+
