--- a/Homeworks/weather.fortcast/index.css
+++ b/Homeworks/weather.fortcast/index.css
@@ -33,8 +33,6 @@
 
 
 
-
-
 /*--city--*/
 .lisbon {
   width: 50%;
@@ -43,9 +41,9 @@
 }
 
 .lisbon:hover {
-border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .city-name {
@@ -66,9 +64,9 @@ border: 5px dotted #3a7999;
 }
 
 .paris:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .belgrad {
@@ -78,9 +76,9 @@ border: 5px dotted #3a7999;
 }
 
 .belgrad:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;;
 }
 
 .venice {
@@ -90,9 +88,9 @@ border: 5px dotted #3a7999;
 }
 
 .venice:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 .tel-aviv {
   width: 25%;
@@ -100,9 +98,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .tel-aviv:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .cair {
@@ -111,9 +109,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .cair:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 .new-york {
   width: 25%;
@@ -121,9 +119,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .new-york:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .new-dehli {
@@ -132,9 +130,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .new-dehli:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .san-francisco {
@@ -143,9 +141,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .san-francisco:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .tokyo {
@@ -154,9 +152,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .tokyo:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 
@@ -166,9 +164,9 @@ border: 5px dotted #3a7999;
   border-right: 2px solid var(--c-white);
 }
 .sydney:hover {
-  border: 5px dotted #3a7999;
-	color: #000000;
-  transition: all 0.6s ease 0s;
+  text-shadow: 0px 0px 6px rgb(189, 6, 6);
+  box-shadow: 0px 5px 60px -20px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 .text {
