--- a/Homeworks/Productly/styles/main.css
+++ b/Homeworks/Productly/styles/main.css
@@ -20,6 +20,16 @@ body {
   min-height: 100vh;
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+
+}
+
 img {
   width: 100%;
 }
@@ -46,6 +56,16 @@ h6 {
 h1 {
   line-height: 54px;
   font-size: 2.75em;
+}
+
+h2 {
+  line-height: 44px;
+  font-size: 2em;
+}
+
+h4 {
+  line-height: 44px;
+  font-size: 1em;
 }
 
 p {
