--- a/Homeworks/Productly/index.css
+++ b/Homeworks/Productly/index.css
@@ -112,9 +112,9 @@
 }
 .tools-bg {
   position: absolute;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
+  bottom: 100px;
+  z-index: -1;
+  width: 100vw;
 }
 
 /* * Tools */
